k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cao-cluster
  labels:
    app.kubernetes.io/part-of: cao-fleet
